Tritao: Index has improvements for fewer code warnings.